v2/aibrix/aigateway-integration/lora-dynamic-loading-with-aigateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aibrix-ai-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: aibrix-ai-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: aibrix-ai-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
